# log_analyzer

./: .gitlab-ci.yml  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
data/config_examples/: config.json
log_analyzer/: classes.py  default_config.json  main.py  own_logger.py  settings.py
tests/: test_log_analyzer.py
