[tool.poetry]
name = "log-analyzer"
version = "0.1.0"
description = "A tool for getting the technical info from nginx logs"
authors = ["sergeevalera <valeriia.sergeeva@gmail.com>"]
readme = "README.md"
packages = [{include = "log_analyzer"}]

[tool.poetry.dependencies]
python = "^3.10"
argparse = "^1.4.0"
loguru = "^0.7.3"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
mypy = "^1.15.0"
isort = "^6.0.1"
flake8 = "^7.2.0"
pre-commit = "^4.2.0"

[tool.poetry.scripts]
analyzer = "log_analyzer.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["log_analyzer", "tests"]
skip_gitignore = true
filter_files = true

[tool.black]
line-length = 100
exclude = '''
/(
\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| build
| dist
)/
'''

[tool.mypy]
exclude = []
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
